--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
   "description": "The Shopping List Management Application allows users to organize shopping",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.mjs"
   },
   "author": "",
   "license": "ISC"
