--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
+    "buffer": "^6.0.3",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-cookie": "^7.2.2",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.2.0"
+    "react-router-dom": "^7.2.0",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
